--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
+    {% load static %}
+<link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
     {% block content %}{% endblock %}
