--- a/templates/personality_diagnosis/index.html
+++ b/templates/personality_diagnosis/index.html
@@ -1,6 +1,7 @@
 
 {% extends 'base.html' %}
-
+{% load static %}
+<link rel="stylesheet" href="{% static 'style.css' %}">
 {% block content %}
     <h1>Hello, World!</h1>
 {% endblock %}
