--- a/templates/personality_diagnosis/index.html
+++ b/templates/personality_diagnosis/index.html
@@ -3,5 +3,10 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'style.css' %}">
 {% block content %}
-    <h1>Hello, World!</h1>
+    <h1>Web Scraper</h1>
+    <form method="post" action="{% url 'get_info' %}">
+    {% csrf_token %}
+    <input type="text" name="url" placeholder="URLを入力してください">
+    <input type="text" name="account_name" placeholder="アカウント名を入力してください">
+    <button type="submit">検索</button>
 {% endblock %}
