--- a/templates/personality_diagnosis/result.html
+++ b/templates/personality_diagnosis/result.html
@@ -10,7 +10,7 @@
     <p>{{ url }}</p>
     {% endfor %}
     
-    <a href="{% url 'scrape' %}">
+    <a href="{% url 'get_json' %}">
         <button >スクレイピングを開始</button>
        </a>
 
