--- a/templates/personality_diagnosis/index.html
+++ b/templates/personality_diagnosis/index.html
@@ -8,5 +8,6 @@
     {% csrf_token %}
     <input type="text" name="url" placeholder="URLを入力してください">
     <input type="text" name="account_name" placeholder="アカウント名を入力してください">
+    <input type="text" name="account_id" placeholder="アカウントIDを入力してください">
     <button type="submit">検索</button>
 {% endblock %}
